# EVCS

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  README.txt
config/: cz.ini  czqm.ini  default.ini  默认配置.ini
docs/: 配置文件功能说明.md
resource/: app.manifest  resource.h  resources.rc
script/: _deploy.bat  _detect.bat  build.bat  build.ps1  clean.bat  clean.ps1  debug.bat  release.bat
src/: AudioPlayer.cpp  AudioPlayer.h  ConfigManager.cpp  ConfigManager.h  Instruction.cpp  Instruction.h  MainWindow.cpp  MainWindow.h  PathUtil.cpp  PathUtil.h  StringUtil.cpp  StringUtil.h  Subject.cpp  Subject.h  main.cpp  version.h
